--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -3,20 +3,28 @@ server:
 
 spring:
   application:
-    name: user-service
+    name: catalog-service
   h2:
     console:
       settings:
         web-allow-others: true
-      path: /user-service/h2-console
+      path: /catalog-service/h2-console
+      enabled: true
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:~/test;AUTO_SERVER=true
     username: sa
+    password:
   jpa:
-#    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
+    show-sql: true
+    generate-ddl: true
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
 
 eureka:
   instance:
@@ -26,6 +34,3 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
-
-greeting:
-  message: Welcome to the simple e-commerce.
