--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -7,4 +7,5 @@ spring:
     config:
       server:
         git:
-          uri: file://C:/Users/DIR-N-108/Desktop/direa_kjy/SpringCloud
+          uri: file://C:/Users/kim/Desktop/spring_cloud/SpringCloud
+#          uri: file://C:/Users/DIR-N-108/Desktop/direa_kjy/SpringCloud
