--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -3,9 +3,24 @@ server:
 spring:
   application:
     name: config-server
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: admin
+  profiles:
+    active: native
   cloud:
     config:
       server:
+        native:
+          search-locations: file:///${user.home}/Desktop/direa_kjy/configServerNative
         git:
-          uri: file://C:/Users/kim/Desktop/spring_cloud/configServer
+          uri: https://github.com/kjy4926/my-spring-cloud-config.git
+#          uri: file://C:/Users/kim/Desktop/spring_cloud/configServer
 #          uri: file://C:/Users/DIR-N-108/Desktop/direa_kjy/configServer
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
