--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -4,19 +4,23 @@ server:
 spring:
   application:
     name: order-service
-  h2:
-    console:
-      settings:
-        web-allow-others: true
-      path: /order-service/h2-console
-      enabled: true
+#  h2:
+#    console:
+#      settings:
+#        web-allow-others: true
+#      path: /h2-console
+#      enabled: true
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/test;AUTO_SERVER=true
-    username: sa
-    password:
+    url: jdbc:mariadb://localhost:3306/mydb
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: w3084926
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:~/test;AUTO_SERVER=true
+#    username: sa
+#    password:
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MariaDB103Dialect
     hibernate:
       ddl-auto: update
     show-sql: true
